--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@hono/swagger-ui": "^0.5.1",
+    "@hono/zod-openapi": "^0.19.6",
     "hono": "^4.7.9"
   },
   "devDependencies": {
