--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-openapi": "^0.19.6",
-    "hono": "^4.7.9"
+    "hono": "^4.7.9",
+    "mongoose": "^8.14.3",
+    "parse-duration": "^2.1.4"
   },
   "devDependencies": {
     "@types/bun": "latest"
