--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "fluent-ffmpeg": "^2.1.3",
     "hono": "^4.7.9",
     "mongoose": "^8.14.3",
-    "parse-duration": "^2.1.4"
+    "parse-duration": "^2.1.4",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/bun": "latest"
