--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@hono/zod-openapi": "beta",
     "@types/fluent-ffmpeg": "^2.1.27",
     "fluent-ffmpeg": "^2.1.3",
+    "fuse.js": "^7.1.0",
     "hono": "^4.7.9",
     "mongoose": "^8.14.3",
     "parse-duration": "^2.1.4",
