--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "MusicBackend-v2",
-  "scripts": {
-    "dev": "bun run --hot src/index.ts"
-  },
-  "dependencies": {
-    "@hono/swagger-ui": "^0.5.1",
-    "@hono/zod-openapi": "beta",
-    "@types/fluent-ffmpeg": "^2.1.27",
-    "fluent-ffmpeg": "^2.1.3",
-    "fuse.js": "^7.1.0",
-    "hono": "^4.7.9",
-    "mongoose": "^8.14.3",
-    "parse-duration": "^2.1.4",
-    "zod": "^3.25.67"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  }
+    "name": "MusicBackend-v2",
+    "scripts": {
+        "dev": "bun run --hot src/index.ts",
+        "start": "bun run src/index.ts"
+    },
+    "dependencies": {
+        "@hono/swagger-ui": "^0.5.1",
+        "@hono/zod-openapi": "beta",
+        "@types/fluent-ffmpeg": "^2.1.27",
+        "fluent-ffmpeg": "^2.1.3",
+        "fuse.js": "^7.1.0",
+        "hono": "^4.7.9",
+        "mongoose": "^8.14.3",
+        "parse-duration": "^2.1.4",
+        "zod": "^3.25.67"
+    },
+    "devDependencies": {
+        "@types/bun": "latest"
+    }
 }
